Restrict Java processes to 300 MB memory